# digital-entity

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  focus_agent.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  tox.ini  voice_assistant.py
ai_focus_assistant/: main.py  ui_manager.py
docs/: CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_SETUP.md  LEARNING_GUIDE.md  TROUBLESHOOTING.md
tests/: test_focus_agent.py  test_helper.py
